
    - A *large* number of deprecated methods and features will be removed;
      primarily the deprecated :meth:`PasswordHash.encrypt`
      and :meth:`CryptContext.encrypt` aliases.

    - :mod:`passlib.context`: :class:`!CryptContext` objects will default to ``deprecated="auto"``,
      meaning all but the first scheme will be considered deprecated unless
      explicitly stated otherwise.

.. rst-class:: emphasize-children toc-always-open

**1.7** (NOT YET RELEASED)
==========================

.. todo::

    The following tasks are blocking the 1.7 release:

    * Finish the :mod:`passlib.totp` module (:issue:`44`)

        - tests
        - narrative documentation
        - audit encrypted mode code

    * :mod:`passlib.pwd`

        - final length should be adjusted to account for sequence space
          that's omitted by min_complexity cutoff; or decide this is non-issue.

        - decide if this is ready, or if should be pushed to 1.8 --
          should remove announcement from 1.7 changelog in that case.

    * Get :mod:`passlib.apache` context profiles finished & committed.

Overview
--------

    *Welcome to Passlib 1.7!*

    This release includes a number of new features, cleans up
    some long-standing design issues, and contains a number of internal
    improvements; all part of the roadmap towards a leaner and simpler Passlib 2.0.

    *Highlights include:*

    * Support for :class:`~passlib.hash.argon2` and
      :class:`~passlib.hash.scrypt` hashes.

    .. currentmodule:: passlib.ifc

    * The misnamed :meth:`PasswordHash.encrypt` method is deprecated, new code should
      now call :meth:`PasswordHash.hash` instead.  This is part of a much
      larger project to clean up passlib's password hashing API
      (see *Deprecations* below)

    * Experimental TOTP (two factor authentication) helpers in the :mod:`passlib.totp` module.

    * Large speedup of the internal PBKDF2 routines.

Requirements
------------
